--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -7,10 +7,16 @@
   flex-direction: column;
   justify-content: center;
   background-color: var(--white);
-  /* align-items: center; */
   padding: 0 0 0 32px;
   width: 283px;
   text-align: start;
+}
+
+@media only screen and (max-width: 640px) {
+  .sidebar {
+    left: 0;
+    width: unset;
+  }
 }
 
 .sidebar__button {
@@ -18,9 +24,16 @@
   top: 18px;
   right: 18px;
   cursor: pointer;
-  border: 2px solid var(--orange);
-  border-radius: 10px;
+  border: none;
   background: url("/assets/close.svg") no-repeat center center;
+  background-size: 100% 100%;
   width: 44px;
   height: 44px;
+}
+
+@media only screen and (max-width: 640px) {
+  .sidebar__button {
+    width: 32px;
+    height: 32px;
+  }
 }
